--- a/.deliver/config
+++ b/.deliver/config
@@ -2,7 +2,7 @@
 
 APP="blog"
 
-BUILD_HOST="139.59.155.199"
+BUILD_HOST="api.ordinaryfunction.net"
 BUILD_USER="deploy"
 BUILD_AT="/tmp/edeliver/$APP/builds"
 
@@ -12,7 +12,7 @@ CLEAN_DEPLOY=true
 # prevent re-installing node modules; this defaults to "."
 GIT_CLEAN_PATHS="_build rel priv/static"
 
-PRODUCTION_HOSTS="139.59.155.199"
+PRODUCTION_HOSTS="api.ordinaryfunction.net"
 PRODUCTION_USER="deploy"
 DELIVER_TO="/home/deploy/apps"
 
